Add gunicorn with gevent to requirements

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,5 +2,6 @@
 flask>=2.3
 numpy>=1.21
 scipy>=1.7
+gunicorn[gevent]
 # matplotlib is optional (used only by validate_bidmc.py, not the server)
 # wfdb is optional (needed only for live PhysioNet downloads)
